--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/x-grid": "^4.0.0-alpha.37",
+    "@material-ui/x-grid-data-generator": "^4.0.0-alpha.37",
+    "@mui/x-data-grid": "^5.15.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.13",
     "web-vitals": "^2.1.4"
